#777 replacement of wmic + some sonar alert fixes